--- a/mobile.css
+++ b/mobile.css
@@ -95,6 +95,12 @@ button {
   border: none;
 }
 
+button:active {
+  background-color: transparent;
+  border: var(--neutral-transparent-white) 1px solid;
+  color: var(--neutral-transparent-white);
+}
+
 figure, h1, article {
   margin-bottom: 28px;
 }
